docs/v8.0/packages_api/data/datatransformerid.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "DataTransformerID"
keywords = ["grafana","documentation","sdk","@grafana/data"]
type = "docs"
disable_edit_link = true
+++

## DataTransformerID enum

### DataTransformerID enum

<b>Signature</b>

```typescript
export declare enum DataTransformerID 
```
<b>Import</b>

```typescript
import { DataTransformerID } from '@grafana/data';
```

## Enumeration Members

|  Member | Value | Description |
|  --- | --- | --- |
|  append | <code>&quot;append&quot;</code> |  |
|  calculateField | <code>&quot;calculateField&quot;</code> |  |
|  concatenate | <code>&quot;concatenate&quot;</code> |  |
|  ensureColumns | <code>&quot;ensureColumns&quot;</code> |  |
|  filterByRefId | <code>&quot;filterByRefId&quot;</code> |  |
|  filterByValue | <code>&quot;filterByValue&quot;</code> |  |
|  filterFields | <code>&quot;filterFields&quot;</code> |  |
|  filterFieldsByName | <code>&quot;filterFieldsByName&quot;</code> |  |
|  filterFrames | <code>&quot;filterFrames&quot;</code> |  |
|  groupBy | <code>&quot;groupBy&quot;</code> |  |
|  histogram | <code>&quot;histogram&quot;</code> |  |
|  labelsToFields | <code>&quot;labelsToFields&quot;</code> |  |
|  merge | <code>&quot;merge&quot;</code> |  |
|  noop | <code>&quot;noop&quot;</code> |  |
|  order | <code>&quot;order&quot;</code> |  |
|  organize | <code>&quot;organize&quot;</code> |  |
|  prepareTimeSeries | <code>&quot;prepareTimeSeries&quot;</code> |  |
|  reduce | <code>&quot;reduce&quot;</code> |  |
|  rename | <code>&quot;rename&quot;</code> |  |
|  renameByRegex | <code>&quot;renameByRegex&quot;</code> |  |
|  seriesToColumns | <code>&quot;seriesToColumns&quot;</code> |  |
|  seriesToRows | <code>&quot;seriesToRows&quot;</code> |  |
|  sortBy | <code>&quot;sortBy&quot;</code> |  |

